Added 'Using Event Alerts for PCF' documentation
- Subscribing docs
- Unsubscribing docs

[#153200497]

Signed-off-by: Jeremy Alvis <jalvis@pivotal.io>
Signed-off-by: Warren Fernandes <wfernandes@pivotal.io>

--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -63,11 +63,11 @@ Follow the steps below to choose an Availability Zone (AZ) to run Event Alerts a
       </tr>
       <tr>
         <td><strong>Page user name</strong></td>
-        <td>This field is required. This username must specify a valid cf user configured with a valid email address. Please refer to <a target="_blank" href="https://docs.cloudfoundry.org/uaa/uaa-user-management.html">Creating and Managing Users with the UAA CLI (UAAC)</a> for instructions on user creation.</td>
+        <td>This field is required. This username must specify a valid cf user configured with a valid email address. Please refer to <a target="_blank" href="https://docs.cloudfoundry.org/uaa/uaa-user-management.html">Creating and Managing Users with the UAA CLI (UAAC)</a> for instructions on user creation.<br/><br/>The default value is <strong><code>admin</code></strong></td>
       </tr>
       <tr>
         <td><strong>Page space</strong></td>
-        <td>This field is required. Any user that is a member of this space will receieve email notifications. The space name can be an existing space in the <code>system</code> org. If the space does not exist, it will be created when Event Alerts for PCF is installed. Please refer to <a target="_blank" href="https://docs.cloudfoundry.org/adminguide/cli-user-management.html">Creating and Managing Users with the cf CLI</a> for instructions on how to assign a user to a space.</td>
+        <td>This field is required. Any user that is a member of this space will receieve email notifications. The space name can be an existing space in the <code>system</code> org. If the space does not exist, it will be created when Event Alerts for PCF is installed. Please refer to <a target="_blank" href="https://docs.cloudfoundry.org/adminguide/cli-user-management.html">Creating and Managing Users with the cf CLI</a> for instructions on how to assign a user to a space.<br/><br/>The default value is <strong><code>event-alerts-users</code></strong></td>
       </tr>
     </table>
 1. Click **Save**.
