Updating layout and subnav with proper Event Alerts names [#153200482]
Signed-off-by: Warren Fernandes <wfernandes@pivotal.io>
Signed-off-by: Ernst Riemer <eriemer@pivotal.io>

--- a/docs-book/master_middleman/source/subnavs/event-alerts-for-pcf_subnav.erb
+++ b/docs-book/master_middleman/source/subnavs/event-alerts-for-pcf_subnav.erb
@@ -5,19 +5,20 @@
   <div class="nav-content">
     <ul>
       <li>
-        <a id='home-nav-link' href="/myservice/index.html">Event Alerts for PCF (Beta for Healthwatch Tile)</a>
+        <a id='home-nav-link' href="/event-alerts-for-pcf/index.html">Event Alerts for PCF (Beta for Healthwatch Tile)</a>
       </li>
 
       <li>
-        <a href="/myservice/installing.html">Installing and Configuring Event Alerts for PCF</a>
+        <a href="/event-alerts-for-pcf/installing.html">Installing and Configuring Event Alerts for PCF</a>
       </li>
 
       <li>
-        <a href="/myservice/using.html">Using Event Alerts for PCF</a>
+        <a href="/event-alerts-for-pcf/using.html">Using Event Alerts for PCF</a>
       </li>
 
       <li>
         <a href="/myservice/release-notes.html">Release Notes</a>
+        <a href="/event-alerts-for-pcf/release-notes.html">Release Notes</a>
       </li>
       
     </ul>
