Add troubleshooting documentation
[#153200513]

Signed-off-by: Jeremy Alvis <jalvis@pivotal.io>

--- a/docs-book/master_middleman/source/subnavs/event-alerts-for-pcf_subnav.erb
+++ b/docs-book/master_middleman/source/subnavs/event-alerts-for-pcf_subnav.erb
@@ -17,7 +17,10 @@
       </li>
 
       <li>
-        <a href="/myservice/release-notes.html">Release Notes</a>
+        <a href="/event-alerts-for-pcf/troubleshooting.html">Troubleshooting Event Alerts for PCF</a>
+      </li>
+
+      <li>
         <a href="/event-alerts-for-pcf/release-notes.html">Release Notes</a>
       </li>
       
