PCF Event Alerts name change

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -1,11 +1,11 @@
 ---
-title: Event Alerts for PCF (Beta for Healthwatch Tile)
+title: PCF Event Alerts (Beta for Healthwatch Tile)
 owner: PCF Event Alerts
 ---
 
 <p class="note warning">
 <strong>IMPORTANT! </strong>
-The Event Alerts for PCF tile is currently in beta and is intended for evaluation and test purposes only.
+The PCF Event Alerts tile is currently in beta and is intended for evaluation and test purposes only.
 Do not use this product in a PCF production environment.
 </p>
 
@@ -14,7 +14,7 @@ via email to CF users.
 
 ## <a id='overview'></a>Overview
 
-Event Alerts for PCF is a service that reads events from the firehose and turns them into email notifications
+PCF Event Alerts is a service that reads events from the firehose and turns them into email notifications
 sent to CF users.
 
 ## <a id='features'></a>Key Features
@@ -26,7 +26,7 @@ Event Alerts includes the following key features:
 
 ## <a id="snapshot"></a>Product Snapshot
 
-The following table provides version and version-support information about Event Alerts for PCF.
+The following table provides version and version-support information about PCF Event Alerts.
 
 <table class="nice">
     <th>Element</th>
@@ -55,7 +55,7 @@ The following table provides version and version-support information about Event
 
 ## <a id="reqs"></a>Requirements
 
-Event Alerts for PCF has the following requirements:
+PCF Event Alerts has the following requirements:
 
 + Pivotal Elastic Runtime v1.12.x deployed with the following:
   + `Email Notifications` enabled with SMTP server configured.
@@ -63,7 +63,7 @@ Event Alerts for PCF has the following requirements:
 
 ## <a id="limitations"></a>Limitations
 
-Event Alerts for PCF has the following limitations:
+PCF Event Alerts has the following limitations:
 
 + Only sends email notifications on Healthwatch events.
 + Only sends emails to cf users.
