PCF Event Alerts

--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -1,9 +1,9 @@
 ---
-title: Release Notes for Event Alerts for PCF
+title: Release Notes for PCF Event Alerts
 owner: PCF Event Alerts
 ---
 
-These are release notes for Event Alerts for PCF.
+These are release notes for PCF Event Alerts.
 
 ##<a id="ver"></a> v1.0.0
 
