PCF Event Alerts

--- a/docs-content/troubleshooting.html.md.erb
+++ b/docs-content/troubleshooting.html.md.erb
@@ -1,13 +1,13 @@
 ---
-title: Troubleshooting Event Alerts for PCF
+title: Troubleshooting PCF Event Alerts
 owner: PCF Event Alerts
 ---
 
-This topic describes how to troubleshoot Event Alerts for PCF.
+This topic describes how to troubleshoot PCF Event Alerts.
 
 ##<a id='overview'></a> Overview
 
-Event Alerts for PCF is deployed as a CF app. By default, this app is called `event-alerts` and is deployed in the `event-alerts` space within the `system` org.
+PCF Event Alerts is deployed as a CF app. By default, this app is called `event-alerts` and is deployed in the `event-alerts` space within the `system` org.
 The `event-alerts` app functions as a nozzle for the firehose and sends email notifications to both a user and space with information regarding matched events.
 
 ##<a id='metrics'></a> Event Alerts Metrics
