PCF Event Alerts

--- a/docs-content/using.html.md.erb
+++ b/docs-content/using.html.md.erb
@@ -1,9 +1,9 @@
 ---
-title: Using Event Alerts for PCF
+title: Using PCF Event Alerts
 owner: PCF Event Alerts
 ---
 
-This topic describes how to use Event Alerts for PCF.
+This topic describes how to use PCF Event Alerts.
 
 ##<a id='subscribe'></a> Subscribing to Notifications
 
