--- a/docs-book/master_middleman/source/subnavs/event-alerts-for-pcf_subnav.erb
+++ b/docs-book/master_middleman/source/subnavs/event-alerts-for-pcf_subnav.erb
@@ -5,19 +5,19 @@
   <div class="nav-content">
     <ul>
       <li>
-        <a id='home-nav-link' href="/event-alerts-for-pcf/index.html">Event Alerts for PCF (Beta for Healthwatch Tile)</a>
+        <a id='home-nav-link' href="/event-alerts-for-pcf/index.html">PCF Event Alerts (Beta for Healthwatch Tile)</a>
       </li>
 
       <li>
-        <a href="/event-alerts-for-pcf/installing.html">Installing and Configuring Event Alerts for PCF</a>
+        <a href="/event-alerts-for-pcf/installing.html">Installing and Configuring PCF Event Alerts</a>
       </li>
 
       <li>
-        <a href="/event-alerts-for-pcf/using.html">Using Event Alerts for PCF</a>
+        <a href="/event-alerts-for-pcf/using.html">Using PCF Event Alerts</a>
       </li>
 
       <li>
-        <a href="/event-alerts-for-pcf/troubleshooting.html">Troubleshooting Event Alerts for PCF</a>
+        <a href="/event-alerts-for-pcf/troubleshooting.html">Troubleshooting PCF Event Alerts</a>
       </li>
 
       <li>
