Adds doc section about CF CLI plugin
[#154253701]

Signed-off-by: Jeremy Alvis <jalvis@pivotal.io>

--- a/docs-book/master_middleman/source/subnavs/event-alerts-for-pcf_subnav.erb
+++ b/docs-book/master_middleman/source/subnavs/event-alerts-for-pcf_subnav.erb
@@ -24,6 +24,9 @@
         <a href="/event-alerts-for-pcf/release-notes.html">Release Notes</a>
       </li>
 
+      <li>
+        <a href="/event-alerts-for-pcf/plugin.html">PCF Event Alerts Plugin</a>
+      </li>
     </ul>
   </div>
 </div><!--end of sub-nav-->
