Update plugin name
Signed-off-by: Jeremy Alvis <jalvis@pivotal.io>

--- a/docs-content/plugin.html.md.erb
+++ b/docs-content/plugin.html.md.erb
@@ -18,7 +18,7 @@ The CLI plugin can be used to subscribe to topics that are published by a variet
 cf add-plugin-repo CF-Community https://plugins.cloudfoundry.org
 
 # To install latest release
-cf install-plugin -r CF-Community "PCF Event Alerts (Beta)"
+cf install-plugin -r CF-Community event-alerts
 ```
 
 ##<a id='uninstalling'></a> Uninstalling
