--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -7,7 +7,7 @@ This topic describes how to use PCF Event Alerts.
 
 ##<a id='subscribe'></a> Subscribing to Notifications
 
-In order to receive notifications for Healthwatch events, a user must be configured in the `Alerting` configuration. The default user is `admin`. See [Configure Event Alerts Alerting Options](/event-alerts-for-pcf/installing.html#event-alerts-alerting-config).
+In order to receive notifications for Healthwatch events, a user must be configured in the `Alerting` configuration. The default user is `admin`. See [Configure Event Alerts Alerting Options](installing.html#event-alerts-alerting-config).
 
 If notifications need to be sent to multiple users, CF users can be added to the configured space.
 By default this space is `event-alerts-users`.  See [Configure Event Alerts Alerting Options](installing.html#event-alerts-alerting-config).
