--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -33,7 +33,7 @@ The following table provides version and version-support information about PCF E
     <th>Details</th>
     <tr>
         <td>Tile version</td>
-        <td>v1.0.0</td>
+        <td>v1.1.0</td>
     </tr>
     <tr>
         <td>Release date</td>
@@ -41,11 +41,11 @@ The following table provides version and version-support information about PCF E
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
-        <td>v1.12.x</td>
+        <td>v2.1.x</td>
     </tr>
     <tr>
-        <td>Compatible Elastic Runtime version(s)</td>
-        <td>v1.12.x</td>
+        <td>Compatible Pivotal Application Service (PAS) version(s)</td>
+        <td>v2.1.x</td>
     </tr>
     <tr>
         <td>IaaS support</td>
@@ -57,9 +57,12 @@ The following table provides version and version-support information about PCF E
 
 PCF Event Alerts has the following requirements:
 
-+ Pivotal Elastic Runtime v1.12.x deployed with the following:
++ Ops Manager v2.1 or later 
++ PAS v2.1.x deployed with the following:
   + `Email Notifications` enabled with SMTP server configured.
   + `Notifications Errand` and `Notifications UI Errand` run.
++ MySQL for Pivotal Cloud Foundry (PCF) v2.3 or later, or external MySQL credentials
++ (Optional) Slack account for Slack integration
 
 ## <a id="limitations"></a>Limitations
 
