edits to grammar and style [#155725355]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -3,26 +3,19 @@ title: PCF Event Alerts (Beta for Healthwatch Tile)
 owner: PCF Event Alerts
 ---
 
-<p class="note warning">
-<strong>IMPORTANT! </strong>
-The PCF Event Alerts tile is currently in beta and is intended for evaluation and test purposes only.
-Do not use this product in a PCF production environment.
-</p>
-
-This documentation describes Event Alerts for Pivotal Cloud Foundry (PCF). Event Alerts sends notifications
-via email to CF users.
+This documentation describes Event Alerts for Pivotal Cloud Foundry (PCF).
 
 ## <a id='overview'></a>Overview
 
 PCF Event Alerts is a service that reads events from the firehose and turns them into email notifications
-sent to CF users.
+that it sends to CF users.
 
 ## <a id='features'></a>Key Features
 
-Event Alerts includes the following key features:
+The Event Alerts service enables you to:
 
-* Send an email to a specific CF user.
-* Send emails to users within a specific CF space.
+* Send alert email to a specific CF user.
+* Send alert email to users within a specific CF space.
 
 ## <a id="snapshot"></a>Product Snapshot
 
@@ -37,7 +30,7 @@ The following table provides version and version-support information about PCF E
     </tr>
     <tr>
         <td>Release date</td>
-        <td>December 15, 2017</td>
+        <td>March xx, 2018</td>
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
