--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -7,8 +7,8 @@ This documentation describes Event Alerts for Pivotal Cloud Foundry (PCF).
 
 ## <a id='overview'></a>Overview
 
-PCF Event Alerts is a service that reads events from the firehose and turns them into email notifications
-that it sends to CF users.
+PCF Event Alerts is a service that reads events from the Loggregator Firehose and turns them into email notifications,
+which it sends to CF users.
 
 ## <a id='features'></a>Key Features
 
@@ -50,19 +50,18 @@ The following table provides version and version-support information about PCF E
 
 PCF Event Alerts has the following requirements:
 
-+ Ops Manager v2.1 or later 
 + PAS v2.1.x deployed with the following:
   + `Email Notifications` enabled with SMTP server configured.
   + `Notifications Errand` and `Notifications UI Errand` run.
 + MySQL for Pivotal Cloud Foundry (PCF) v2.3 or later, or external MySQL credentials
-+ (Optional) Slack account for Slack integration
++ Slack account (if you are using Slack integration)
 
 ## <a id="limitations"></a>Limitations
 
 PCF Event Alerts has the following limitations:
 
 + Only sends email notifications on Healthwatch events.
-+ Only sends emails to cf users.
++ Only sends emails to CF users.
 
 ## <a id="feedback"></a>Feedback
 
