fixes tiny typos

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -53,7 +53,7 @@ PCF Event Alerts has the following requirements:
 + PAS v2.1.x deployed with the following:
   + `Email Notifications` enabled with SMTP server configured.
   + `Notifications Errand` and `Notifications UI Errand` run.
-+ MySQL for Pivotal Cloud Foundry (PCF) v2.3 or later, or external MySQL credentials
++ MySQL for PCF v2.3 or later, or external MySQL credentials
 + Slack account (if you are using Slack integration)
 
 ## <a id="limitations"></a>Limitations
@@ -66,4 +66,5 @@ PCF Event Alerts has the following limitations:
 ## <a id="feedback"></a>Feedback
 
 If you have a feature request, questions, or information about a bug, please email
-[Pivotal Cloud Foundry Feedback](mailto:pivotal-cf-feedback@pivotal.io) list or send an email to `pcf-event-alerts at pivotal.io`.
+the [Pivotal Cloud Foundry Feedback](mailto:pivotal-cf-feedback@pivotal.io) list
+or [pcf-event-alerts@pivotal.io](mailto:pcf-event-alerts@pivotal.io).
