resets rel date to April[#156172415]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -7,17 +7,14 @@ These are release notes for PCF Event Alerts.
 
 ##<a id="ver"></a> v1.0.0
 
-**Release Date:** December 15, 2017
+**Release Date:** April 6, 2018
+
+### <a id="features"></a> Features
 
 Features included in this release:
 
-* Send an email to a specific CF user.
-* Send emails to users within a specific CF space.
+* Sends Slack and email notifications of alerts about Healthwatch to users.
 
-Fixed issues in this release:
+### <a id="known"></a> Known Issues
 
-* None - Initial release
-
-Known issues in this release:
-
-* None
+No known issues for this release.
