small changes to plugin[#156172415]

--- a/plugin.html.md.erb
+++ b/plugin.html.md.erb
@@ -3,17 +3,19 @@ title: PCF Event Alerts Plugin (Beta)
 owner: PCF Event Alerts
 ---
 
-This topic describes how to use PCF Event Alerts Plugin.
+This topic describes how to install and use Pivotal Cloud Foundry (PCF) Event Alerts plugin
+for the cf Command Line Interface (CLI) tool.
 
 ##<a id='purpose'></a> Purpose
 
-The PCF Event Alerts Plugin is in beta and is currently under development.
+The PCF Event Alerts plugin is in beta and is currently under development.
 
 The CLI plugin can be used to subscribe to topics that are published by a variety of publishers such as Healthwatch.
 
 ##<a id='installing'></a> Installing
 
-Download and install the plugin from Pivotal Network. It is currently only available to admins.
+Download and install the plugin from Pivotal Network.
+It is currently only available to admins.
 ```
 cf install-plugin <path-to-binary>
 ```
