remove unsubscribe references from using[#156172415]

--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -3,7 +3,7 @@ title: Using PCF Event Alerts
 owner: PCF Event Alerts
 ---
 
-This topic describes how users receive and unsubscribe from Pivotal Cloud Foundry (PCF) Event Alerts.
+This topic describes how users receive Pivotal Cloud Foundry (PCF) Event Alerts.
 
 ##<a id='subscribe'></a> Send Notifications
 
@@ -22,13 +22,3 @@ and is also used to create the space for paging and is, therefore, a user in tha
 </p>
 
 For more information about alerting settings, see [(Optional) Configure Alerting Settings](installing.html#event-alerts-alerting-config).
-
-##<a id='unsubscribe'></a> Unsubscribe from Notifications
-
-To unsubscribe from notifications, do the following:
-
-1. Log in with your CF user credentials.
-1. Do one of the following:
-	* Click the unsubscribe link in the email.
-	* Go to `https://notifications-ui.SYSTEM-DOMAIN` and unsubcribe from that page.
-
